[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/sprout_jump.png" type="Texture" id=1]
[ext_resource path="res://Sprites/little_walky-sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/sprout_idle.png" type="Texture" id=3]
[ext_resource path="res://Sprout.gd" type="Script" id=4]
[ext_resource path="res://SproutAnim.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 17 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "pot_lift",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "pot_place",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "pot_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6.5, 13 )

[sub_resource type="CircleShape2D" id=18]
radius = 19.0

[node name="Sprout" type="KinematicBody2D"]
script = ExtResource( 4 )
GRAVITY = 14.0
JumpHeight = 400.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "pot_place"
playing = true
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Coyote" type="Timer" parent="."]
one_shot = true

[node name="Buffer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PickupRange" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
shape = SubResource( 18 )

[connection signal="timeout" from="Coyote" to="." method="on_coyote_timeout"]
[connection signal="timeout" from="Buffer" to="." method="on_buffer_timeout"]
[connection signal="area_entered" from="PickupRange" to="." method="_on_PickupRange_area_entered"]
[connection signal="area_exited" from="PickupRange" to="." method="_on_PickupRange_area_exited"]
